<resources>
    <string name="app_name">Momo Plants</string>

    <string name="error_unknow">Error unknown</string>
    <string name="error_unique_code">Error unique code</string>

    <string name="msg_welcome_user">Welcome, %s</string>
    <string name="msg_user_not_found">User not found</string>
    <string name="msg_query_error">Error querying data</string>

    <string name="notification_see_track">See</string>
    <string name="notification_channel_id_default">general</string>
    <string name="notification_channel_name_default">Generales</string>

    <string name="login_insert_success">Insert Success</string>

    <string name="alert_required">Required</string>

    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_cart">Cart</string>
    <string name="bottom_navigation_profile">Profile</string>
    <string name="bottom_navigation_orders">Orders</string>

    <string name="label_description">Description:</string>
    <string name="label_format">Format:</string>
    <string name="label_origin">Origin:</string>
    <string name="label_weather">Weather:</string>
    <string name="label_my_profile">My profile</string>
    <string name="label_basic_information">Basic information</string>
    <string name="label_favorite_plant">Find your favourite plant</string>
    <string name="label_instructions_one">We help you choose your first plant and create your own beautiful garden with our plant collection.</string>
    <string name="label_log_in">Let\'s log in</string>
    <string name="label_instructions_log_in">We are waiting for you to register and start your journey with us</string>
    <string name="label_main_title">Plant a green tree to the earth</string>
    <string name="label_main_description">Plant in a sunny location, most plants need at least 6 hours of direct sunlight per day.</string>
    <string name="label_sign_up_description">Sign up and discover all the features our application has to offer. It\'s fast, easy, and free. Join now!</string>
    <string name="label_social_media">Or sign in with social media</string>
    <string name="label_onboarging_title_end">Plants make life better</string>
    <string name="label_onboarging_description_end">Find the ideal plant for you and make your home a beautiful garden.</string>

    <string name="btn_add_to_cart">Add to cart</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="btn_change_password">Change password</string>
    <string name="btn_forgot_password">Forgot password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_see_details">See details</string>
    <string name="btn_sign_email">Sign in with Email</string>
    <string name="btn_sign_google">Sign in with Google</string>
    <string name="btn_sign_phone_number">Sign in with Phone Number</string>
    <string name="btn_sign_facebook">Sign in with Facebook</string>
    <string name="btn_check_out">Check Out</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_verigy_password">Verify the password</string>
    <string name="hint_chat">Mensaje</string>

    <string name="soon_available_option">Soon available this option</string>

    <string name="menu_option_about">About</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_sign_out">Sign Out</string>

    <string name="msg_stock_with_stock">There are plants in our warehouses</string>
    <string name="msg_stock_without_stock">There are no plants in our warehouses</string>

    <string name="product_empty_cart">Empty Cart</string>
    <string name="product_full_cart">$%1$.2f MXN</string>

    <string name="order_track_shipment">Track Shipment</string>
    <string name="order_status">Status: %1$s</string>
    <string name="order_id">ID: %1$s</string>
    <string name="order_chat_help">Need Help?</string>
    <string name="order_title">Purchase History</string>
    <string name="order_status_ordered">Ordered</string>
    <string name="order_status_preparing">Preparing</string>
    <string name="order_status_send">Shipped</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="order_status_unknown">Unknown</string>
    <string name="order_track_update">Updated Shipment Status: %1$s</string>
    <string name="order_track_status">Updated Shipment: %1$s</string>
    <string name="order_status_ordered_subtitle">Your order has been confirmed and is ready to be processed.</string>
    <string name="order_status_preparing_subtitle">We are preparing your order for shipment.</string>
    <string name="order_status_send_subtitle">Your order has been sent and is in transit to the delivery address.</string>
    <string name="order_status_delivered_subtitle">Your order has been successfully delivered to the specified address.</string>
    <string name="order_status_unknown_subtitle">The current status of your order could not be determined. Please contact our customer service for more information.</string>
    <string name="order_purchase_status">Estado de la compra</string>


    <string name="track_title">Tracking</string>
    <string name="traking_dialog_title">Order Tracking</string>

    <string name="add_dialog_btn_success">Success</string>

    <string name="chat_error_load">Error Loading Chat</string>
    <string name="chat_title">Support</string>
    <string name="chat_order_not_found">Order Not Found</string>
    <string name="chat_error_deleting_message">Error Deleting Message.</string>
    <string name="chat_success_deleting_message">Message Deleted.</string>
    <string name="chat_order_found">Order Found</string>

    <string name="track_notification_description">Notifications about order status change</string>

    <string name="cart_purchase_made">Purchase Made</string>
    <string name="cart_error_buying">Error Buying</string>

    <string name="view_login_label_top">Hey there,</string>
    <string name="view_login_label_create_account">Create an Account</string>

    <string name="login_welcome">Welcome %1$s</string>
    <string name="login_see_you_soon">See You Soon</string>
    <string name="login_no_net">No Network</string>
    <string name="login_error_code">Error Code: %1$s</string>
    <string name="login_insert_error">Error</string>

    <string name="downloading">Downloading…</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>

    <string name="new_version">New version</string>
    <string name="new_version_msg">We recommend installing the update</string>

    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_download_update">Download Update</string>
    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_track">Track</string>
    <string name="menu_details">Details</string>

</resources>