<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.johndev.momoplants.ui.homeModule.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_navigation_details"
            app:destination="@id/navigation_details"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.johndev.momoplants.ui.ordersModule.view.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_orders_to_navigation_chat"
            app:destination="@id/navigation_chat" />
        <action
            android:id="@+id/action_orders_to_navigation_track"
            app:destination="@id/navigation_track" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.johndev.momoplants.ui.cartModule.view.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.johndev.momoplants.ui.profileModule.view.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.johndev.momoplants.ui.detailModule.view.DetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="idPlant"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.johndev.momoplants.ui.chatModule.view.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="id0rder"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
    </fragment>

    <fragment
        android:id="@+id/navigation_track"
        android:name="com.johndev.momoplants.ui.trackModule.view.TrackFragment"
        android:label="@string/menu_track"
        tools:layout="@layout/fragment_track">
        <argument
            android:name="id0rder"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
    </fragment>

</navigation>